--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jose": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "openid-client": "^5.6.5",
     "pg": "^8.12.0"
